--- a/webui/public/index.html
+++ b/webui/public/index.html
@@ -24,6 +24,18 @@
   <body style="margin: 0px; padding: 0px;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+     <form>  
+        <div class="container">   
+            <label>Username : </label>   
+            <input type="text" placeholder="Enter Username" name="username" required>  
+            <label>Password : </label>   
+            <input type="password" placeholder="Enter Password" name="password" required>  
+            <button type="submit">Login</button>   
+            <input type="checkbox" checked="checked"> Remember me   
+            <button type="button" class="cancelbtn"> Cancel</button>   
+            Forgot <a href="#"> password? </a>   
+        </div>   
+    </form> 
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
